<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.ei6.biz.applicationtp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText android:id="@+id/nom"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"/>
        <EditText android:id="@+id/tel"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel"/>
        <EditText android:id="@+id/date"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"/>
        <EditText android:id="@+id/heure"
            android:inputType="time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heure"/>
        <Button
            android:id="@+id/valider"
            android:text="@string/entrer_le_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
